
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.rrkj.flour.oauth2.api";
option java_outer_classname = "Oauth2ServiceProto";
option java_generic_services = true;

message TLoginResponse {
	int32	code		= 1;
	string	message	= 2;
	string	accessToken	= 3;
	int64	userid	= 4;
	string	username	= 5;
	map<string,string>	data	= 6;
}


message LoginRequest{
	string	username	= 1;
	string	password	= 2;
}

message TString{
	string	str = 1;
}

service LoginGrpcService {

	rpc checkAccessToken(TString) returns (TLoginResponse) {}
	
	rpc login(LoginRequest) returns (TLoginResponse) {}
}